# agent-framework

./: .gitignore  Cargo.toml  EXECUTIVE_SUMMARY.md  FEATURE_STATUS.md  FRAMEWORK_COMPARISON.md  IMPLEMENTATION_PLAN.md  OPENROUTER_INTEGRATION_SUMMARY.md  README.md  RECOMMENDED_STRUCTURE.md  ROADMAP.md  TEST_REPORT.md  simple_backend.rs
agentgraph-studio-ui/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
benches/: graph_execution.rs
docs/: api-reference.md  apple_inspired_redesign.md  architecture.md  badge_overflow_fixes.md  clean_minimal_redesign.md  complete_system_running.md  comprehensive_dashboard_restored.md  deployment-guide.md  enhanced_ui_summary.md  final_ui_improvements.md  getting-started.md  getting_started.md  implementation_summary.md  langgraph_comparison.md  nextjs_ui_summary.md  openrouter-integration.md  performance-optimization.md  professional_dashboard_redesign.md  release_summary.md  security-guide.md  status.md  subtle_animation_improvements.md  tasks.md  test_summary.md  testing_guide.md  ultra_professional_ui_enhancements.md  visual_interface_summary.md
examples/: README.md  agent_graph_workflow.rs  agents_demo.rs  basic_agent.rs  enterprise_demo.rs  enterprise_deployment.rs  human_in_the_loop_demo.rs  llm_demo.rs  multi_agent_collaboration.rs  openrouter_demo.rs  parallel_processing.rs  simple_agent_workflow.rs  simple_researcher.rs  simple_tools_demo.rs  standalone_agent_workflow.rs  streaming_chat.rs  tools_demo.rs  working_agent_workflow.rs
examples/visual_demo/: Cargo.toml
examples/visual_demo/src/: main.rs
new_agent_framework/: ARCHITECTURE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CURRENT_STATUS.md  Cargo.toml  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  README.md  STRUCTURE_COMPLETE.md  VERIFICATION_REPORT.md  agentgraph.toml  docker-compose.yml
new_agent_framework/benches/: graph_execution.rs
new_agent_framework/crates/agent-graph/: Cargo.toml
new_agent_framework/crates/agent-graph-agents/: Cargo.toml
new_agent_framework/crates/agent-graph-agents/src/: lib.rs
new_agent_framework/crates/agent-graph-agents/src/agent/: agent.rs  builder.rs  mod.rs  runtime.rs
new_agent_framework/crates/agent-graph-agents/src/collaboration/: mod.rs
new_agent_framework/crates/agent-graph-agents/src/memory/: mod.rs  storage.rs  types.rs
new_agent_framework/crates/agent-graph-agents/src/roles/: mod.rs  templates.rs
new_agent_framework/crates/agent-graph-cli/: Cargo.toml
new_agent_framework/crates/agent-graph-cli/src/: config.rs  main.rs
new_agent_framework/crates/agent-graph-cli/src/commands/: benchmark.rs  enterprise.rs  init.rs  list.rs  mod.rs  run.rs  shell.rs  test.rs  validate.rs  version.rs  visualize.rs
new_agent_framework/crates/agent-graph-cli/src/utils/: mod.rs  output.rs
new_agent_framework/crates/agent-graph-core/: Cargo.toml
new_agent_framework/crates/agent-graph-core/src/: lib.rs
new_agent_framework/crates/agent-graph-core/src/edge/: conditions.rs  mod.rs  registry.rs  routing.rs  types.rs
new_agent_framework/crates/agent-graph-core/src/error/: mod.rs  types.rs
new_agent_framework/crates/agent-graph-core/src/graph/: advanced.rs  builder.rs  engine.rs  executor.rs  mod.rs  validation.rs
new_agent_framework/crates/agent-graph-core/src/node/: metadata.rs  mod.rs  registry.rs  specialized.rs  traits.rs
new_agent_framework/crates/agent-graph-core/src/runtime/: config.rs  context.rs  mod.rs
new_agent_framework/crates/agent-graph-core/src/state/: manager.rs  mod.rs  snapshot.rs  traits.rs
new_agent_framework/crates/agent-graph-enterprise/: Cargo.toml
new_agent_framework/crates/agent-graph-enterprise/src/: lib.rs
new_agent_framework/crates/agent-graph-enterprise/src/security/: mod.rs
new_agent_framework/crates/agent-graph-enterprise/src/tenancy/: mod.rs
new_agent_framework/crates/agent-graph-execution/: Cargo.toml
new_agent_framework/crates/agent-graph-execution/src/: lib.rs
new_agent_framework/crates/agent-graph-execution/src/checkpoint/: manager.rs  mod.rs
new_agent_framework/crates/agent-graph-execution/src/parallel/: dependency.rs  executor.rs  mod.rs
new_agent_framework/crates/agent-graph-execution/src/scheduler/: algorithms.rs  mod.rs  priority.rs
new_agent_framework/crates/agent-graph-execution/src/streaming/: events.rs  executor.rs  mod.rs
new_agent_framework/crates/agent-graph-human/: Cargo.toml
new_agent_framework/crates/agent-graph-human/src/: lib.rs
new_agent_framework/crates/agent-graph-human/src/approval/: approval.rs  mod.rs
new_agent_framework/crates/agent-graph-human/src/input/: input.rs
new_agent_framework/crates/agent-graph-human/src/interrupt/: interrupt.rs  mod.rs
new_agent_framework/crates/agent-graph-llm/: Cargo.toml
new_agent_framework/crates/agent-graph-llm/src/: lib.rs
new_agent_framework/crates/agent-graph-llm/src/client/: client.rs
new_agent_framework/crates/agent-graph-llm/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  openrouter.rs  providers.rs
new_agent_framework/crates/agent-graph-llm/src/types/: types.rs
new_agent_framework/crates/agent-graph-tools/: Cargo.toml
new_agent_framework/crates/agent-graph-tools/src/: lib.rs
new_agent_framework/crates/agent-graph-tools/src/builtin/: builtin.rs  database.rs  file.rs
new_agent_framework/crates/agent-graph-tools/src/core/: core.rs
new_agent_framework/crates/agent-graph-visualization/: Cargo.toml
new_agent_framework/crates/agent-graph-visualization/src/: lib.rs
new_agent_framework/crates/agent-graph-visualization/src/tracer/: mod.rs  tracer.rs
new_agent_framework/crates/agent-graph-visualization/src/visualizer/: mod.rs
new_agent_framework/crates/agent-graph-visualization/src/web/: mod.rs
new_agent_framework/crates/agent-graph/src/: lib.rs
new_agent_framework/examples/: complete_workflow.rs
new_agent_framework/examples/graphs/: simple_workflow.json
new_agent_framework/k8s/: deployment.yaml
new_agent_framework/monitoring/: prometheus.yml
scripts/: run_tests.sh
(+316 files in other folders)
