[workspace]
members = [
    "crates/agent-graph-core",
    "crates/agent-graph-execution", 
    "crates/agent-graph-agents",
    "crates/agent-graph-llm",
    "crates/agent-graph-tools",
    "crates/agent-graph-human",
    "crates/agent-graph-enterprise",
    "crates/agent-graph-visualization",
    "crates/agent-graph",
    "crates/agent-graph-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["AgentGraph Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/agent-graph/agent-graph"
documentation = "https://docs.rs/agent_graph"
keywords = ["ai", "agents", "graph", "async", "framework"]
categories = ["asynchronous", "development-tools", "science"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization and state management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Collections and data structures
indexmap = "2.0"
dashmap = "5.0"

# Concurrency primitives
parking_lot = "0.12"
arc-swap = "1.0"

# Hashing for state integrity
md5 = "0.7"

# Random number generation
rand = "0.8"

# HTTP client for tools
reqwest = { version = "0.11", features = ["json"] }

# Serialization formats for checkpoints
bincode = "1.3"
rmp-serde = "1.1"

# Streaming and async utilities
tokio-stream = "0.1"
broadcast = "0.1"
warp = "0.3.7"

# Metrics
prometheus = "0.13"

# Compression
flate2 = "1.0"

[workspace.dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
pretty_assertions = "1.0"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[profile.test]
debug = true
opt-level = 1