[package]
name = "agentgraph_visual_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
warp = "0.3"
futures-util = "0.3"

[[bin]]
name = "main"
path = "src/main.rs"
