[package]
name = "agent-graph-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Command-line interface for AgentGraph framework"
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = ["ai", "agents", "graph", "cli", "framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentgraph"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
agent-graph = { path = "../agent-graph", features = ["full"] }
agent-graph-core = { workspace = true }
agent-graph-llm = { workspace = true }
agent-graph-tools = { workspace = true }
agent-graph-agents = { workspace = true }
agent-graph-human = { workspace = true }
agent-graph-enterprise = { workspace = true }
agent-graph-visualization = { workspace = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive", "env", "color"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Terminal UI
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.0"
tabled = "0.15"

# File operations
tempfile = "3.8"
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"