[package]
name = "agent-graph-human"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Human-in-the-loop workflows and interfaces for AgentGraph"

[dependencies]
agent-graph-core = { path = "../agent-graph-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
warp = { workspace = true }

[features]
default = ["approval", "web"]
approval = []
input = []
interrupt = []
web = []
cli = []